# UPI_SO_005

./: CMakeLists.txt  forks.c  forks.h  forks_pipes.c  forks_pipes.h  main.c  main.out  shared_memory.c  shared_memory.h  signal_handler.c  signal_handler.out  signal_handlers.h  thread_mutex.c  thread_mutex.h  threads.c  threads.h  threads_semaphores.c  threads_semaphores.h
